--- a/Kursach/src/main/resources/application.properties
+++ b/Kursach/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/Kursach
+spring.datasource.username=root
+spring.datasource.password=root
