--- a/Kursach/src/main/resources/application.properties
+++ b/Kursach/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Kursach
+spring.datasource.url=jdbc:mysql://localhost:3306/Kursach?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
