--- a/Kursach/src/main/resources/application.properties
+++ b/Kursach/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Kursach?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Kursach?serverTimezone=UTC&characterEncoding=cp1251
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
